tests/bad/value_enums/different_field_type_in_branch.oc
/// fail: Field type does not match previous branch: i32

enum Foo {
    Case0(x: i32)
    Case1(y: str, x: i32)
    Case2(y: str)
    Case3
}

def main() {
    let foo: Foo = Case1("hello", 42)
    match foo {
        Case0(x) | Case1(x, _) => println(`0|1 => {x}`)
        Case2(y) => println(`2 => {y}`)
        Case3 => println(`3 => ()`)
    }
}